Fix fullscreen on ios

--- a/client/src/app/+videos/+video-watch/video-watch.component.scss
+++ b/client/src/app/+videos/+video-watch/video-watch.component.scss
@@ -609,3 +609,9 @@ my-video-comments {
     }
   }
 }
+
+
+// Special case for iOS, that takes into account the width for fullscreens
+#video-wrapper ::ng-deep .video-js.vjs-fullscreen {
+  max-width: unset;
+}
